--- a/src/style/style.css
+++ b/src/style/style.css
@@ -2,11 +2,11 @@ html {
     height: 100%;
 }
 body{
-    min-height: 100%;
+    height: 100%;
     background: url("https://images.unsplash.com/photo-1454117096348-e4abbeba002c?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80");
 }
-footer {
-    position: relative;
+.footer{
+    position: fixed;
     bottom: 0;
     width: 100%;
 }
